<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">



    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="7dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:background="@drawable/roundedsquare"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/usernamehint"
            android:id="@+id/logUseName"
            android:layout_marginLeft="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedsquare">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20dp"
            android:textColorHint="@color/black"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordhint"
            android:id="@+id/logPWord"
            android:layout_marginLeft="22dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_margin="30dp"
        android:backgroundTint="@color/myPurple"
        android:id="@+id/enter"/>
    </LinearLayout>
</LinearLayout>